--- a/css/default.css
+++ b/css/default.css
@@ -2,6 +2,7 @@ body {
 	display: grid;
    	justify-items: center;
 }
+
 #main {
     /*width: calc(240px* 6 + 35px);*/
     width: 100%;
@@ -80,16 +81,18 @@ p {
 }
 #wid{
     width: 100%;
-    max-width: 1435px;
+    max-width: 1475px;
     position: relative;
     text-align: right;
 }
+/*
 #resetTime {
     position: absolute;
     left: 0px;
     top: 50%;
     transform: translate(0%, -50%);
 }
+*/
 #resetTime #time {
 	border: 0px;
 	width: 150px;
@@ -144,7 +147,7 @@ button:hover, button:active {
 }
 #top-info{
 	width: 100%;
-    max-width: 1435px;
+    max-width: 1475px;
     position: relative;
     text-align: right;
     margin-bottom: 10px;
@@ -206,12 +209,13 @@ span.info-channel.all-server{
 .item.nomatch-addItem {
     padding: 50% 0px;
 }
-
+/*
 #erinTime{
     position: absolute;
     left: 0px;
     transform: translate(0%, -50%);
 }
+*/
 .server-mark{
 	width: 15px;
 	height: 15px;
@@ -263,4 +267,14 @@ span.info-channel.all-server{
 }
 .location-area{
 	width: 100%;
-}    
+}
+#time-area{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: 1475px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
