--- a/css/default.css
+++ b/css/default.css
@@ -81,7 +81,7 @@ p {
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
 }
 #wid{
     width: 100%;
