--- a/css/default.css
+++ b/css/default.css
@@ -20,7 +20,7 @@ body {
     text-align: center;
     margin-bottom: 4px;
 	position: relative;
-   	padding-top: 2px;
+   	padding-top: 10px;
 }
 .color_rect {
     display: inline-block;
@@ -223,7 +223,7 @@ span.info-channel.all-server{
     cursor: pointer;
 }
 .item.nomatch-addItem {
-    padding: 50% 0px;
+   /*padding: 50% 0px;*/
 }
 
 .server-mark{
@@ -291,6 +291,7 @@ span.info-channel.all-server{
     max-width: 1475px;
     left: 50%;
     transform: translate(-50%, 0%);
+    padding-left: 1em;
 }
 p.set-info {
     margin: 0px;
@@ -438,11 +439,11 @@ span#loadingClose {
     flex-direction: column;
     gap: 15px;
     background-color: white;
-    padding: 20px;
+    padding: 35px 15px 15px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
-    width: 60%;
+    width: 55%;
 }
 
 /* 모달 헤더 */
@@ -453,7 +454,7 @@ span#loadingClose {
 /* 모달 바디 */
 #itemModal .modal-body {
     display: flex;
-    gap: 20px;
+    /*gap: 20px;*/
 }
 
 /* 왼쪽 레이아웃: 이미지와 색상 정보 */
@@ -463,12 +464,14 @@ span#loadingClose {
     gap: 7px;
     width: 50%;
     align-items: center;
+    position: relative;
 }
 
 #itemModal .left-layout h3 {
 	text-align: center;
 	margin: 0px;
     margin-top: 8px;
+    padding-left: 4px;
 } 
 
 #itemModal .image-container {
@@ -483,7 +486,6 @@ span#loadingClose {
 #itemModal .zoomable-image {
     max-width: 100%;
     object-fit: contain;
-    cursor: zoom-in;
     transition: transform 0.3s ease;
     image-rendering: pixelated;
     top: -0.7em;
@@ -504,6 +506,7 @@ span#loadingClose {
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 0px 10px;
+    position: relative;
 }
 
 /* 색상 정보 */
@@ -531,7 +534,7 @@ span#loadingClose {
 }
 
 #itemModal #closeModal {
-	text-align: center;
+    text-align: center;
     display: inline;
     width: 20px;
     height: 20px;
@@ -540,6 +543,7 @@ span#loadingClose {
     line-height: 18px;
     position: relative;
     left: 97.5%;
+    top: -24px;
     cursor: pointer;
 }
 .image-copy-container{
@@ -610,4 +614,117 @@ span#loadingClose {
 
 #itemModal .setComplete, #itemModal .server-mark, #itemModal h4{
 	cursor: default;
+}
+
+#modalTime {
+	text-align: left;
+    position: absolute;
+    top: -28px;
+    left: 0px;
+}
+
+label.timeTitle {
+    font-size: 9pt;
+    background: #ddd;
+    border-radius: 20px;
+    padding: 2px 5px;
+}
+
+.set-time{
+    font-size: 9pt;
+    line-height: 19px;
+    /* padding: 0px 4px 4px; */
+    vertical-align: super;
+    padding: 0px 7px 0px 5px;
+}
+
+.info-jumoney-name .color_rect {
+	width: 10px;
+	height: 10px;	
+}
+
+#modal-realTime {
+	opacity: 1;
+    transition: color 0.2s ease, opacity 0.2s ease;
+}
+
+#modalTime{
+	width: 100%;
+}
+
+/* 화면 너비가 1350px 미만일 때 현재 시간 숨기기 */
+@media (max-width: 1350px) {
+    #modal-realTime {
+    	opacity: 0;
+    	height: 0;
+    	color: transparent;
+    	transform: translateY(-10px); /* 위로 슬라이드 */
+    }
+    #modalTime{
+    	width:400px !important;    	
+		/*animation: reset-width 0.5s ease forwards;*/
+    }
+}
+
+/* 애니메이션으로 최종 CSS 상태 설정 */
+@keyframes reset-width {
+    to {
+        width: 100% !important; /* 애니메이션 종료 후 색상 변경 */
+    }
+}
+
+#tables .hidden_rect {
+	display: none;
+}
+#itemModal .info-jumoney-name:before{
+	content: none;
+}
+#itemModal .info-jumoney-name .color_rect {
+    float: left;
+    margin: 0px 0px 0px 0px;
+    height: 10px;
+    width: 10px;
+    border-radius: 6px;
+    margin-top: 2px;
+    position: relative;
+    left: -3px;
+}
+
+.tooltip {
+    display: none; /* 기본적으로 숨기기 */
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;
+    z-index: 10;
+}
+
+/* 툴팁 스타일 */
+#itemModal .info-jumoney-name .color_rect::after {
+    content: attr(alt); /* alt 속성 값 표시 */
+    position: absolute;
+    bottom: 110%; /* 요소 위에 표시 */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.75);
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 4px;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    font-size: 12px;
+    z-index: 10000;
+}
+
+/* 마우스 오버 시 툴팁 표시 */
+#itemModal .info-jumoney-name .color_rect:hover::after {
+    opacity: 1;
+}
+
+#modalApiImage{
+	width:25%;
 }
