--- a/css/default.css
+++ b/css/default.css
@@ -570,7 +570,7 @@ span#loadingClose {
     flex-direction: column;
     align-items: center;
 }
-.image-container2 img, .default_jumoney{
+.default_jumoney{
 	-webkit-filter: grayscale(100%); /* 크롬, 사파리 구형 */
   	filter: grayscale(100%);	
     opacity: 0.6;
