--- a/css/default.css
+++ b/css/default.css
@@ -9,8 +9,15 @@ body {
     max-width: calc(240px* 6 + 35px);
     text-align: center;
 }
+.img-area {
+    image-rendering: pixelated;
+    height: 94px;
+    text-align: center;
+}
 .api-img {
-	width: 35%;
+	/*width: 35%;*/
+    image-rendering: pixelated;
+    height: 94px;
 }
 .item, .channel-info.new-colorSet {
     width: calc(100% - 6px);
@@ -148,7 +155,7 @@ button:hover, button:active {
 }
 .mabibase-img{
 	position: relative;
-	top: -0.51em;
+    bottom: 0.35em;
 }
 #top-info{
 	width: 100%;
@@ -163,7 +170,7 @@ button:hover, button:active {
 #apiKey{
 	padding: 7px 5px;
     font-size: 13pt;
-    width: 15%;
+    width: 10%;
     min-width: 100px;
     text-align: left;
     color: #888;
@@ -490,6 +497,11 @@ span#loadingClose {
     image-rendering: pixelated;
 }
 
+#itemModal .zoomable-image.zoom {
+    transform: scale(2);
+    cursor: zoom-out;
+}
+
 /* 오른쪽 레이아웃: 세트 정보와 채널 정보 */
 #itemModal .right-layout {
     display: flex;
@@ -567,8 +579,9 @@ span#loadingClose {
 .default_jumoney{
 	-webkit-filter: grayscale(100%); /* 크롬, 사파리 구형 */
   	filter: grayscale(100%);	
-    opacity: 0.6;
+    opacity: 0.35;
 }
+
 #itemModal .image-container2 {
     position: relative;
     width: 48px;
