--- a/css/default.css
+++ b/css/default.css
@@ -536,15 +536,14 @@ span#loadingClose {
 
 #itemModal #closeModal {
     text-align: center;
-    display: inline;
+    display: inline-block;
     width: 20px;
     height: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
     line-height: 18px;
     position: relative;
-    left: 97.5%;
-    top: -24px;
+    top: -1.55em;
     cursor: pointer;
 }
 .image-copy-container{
@@ -728,4 +727,27 @@ label.timeTitle {
 
 .img-area .loading-spinner {
 	left: 8em;
+}
+
+#captureBtn {
+    position: relative;
+    top: -1.45em;
+    padding: 2.5px;
+    width: 16px;
+    height: 16px;
+    left: 0px;
+    text-align: center;
+    font-size: 12pt;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    color: #5e5e5e;
+    cursor: pointer;
+    float: left;
+}
+#captureBtn:hover, #closeModal:hover {
+    background: #f0f0f0;
+}
+
+#modal-btns{
+    text-align: right;
 }
