--- a/css/default.css
+++ b/css/default.css
@@ -531,7 +531,7 @@ span#loadingClose {
 
 #itemModal .color-info .rgb{
    padding-left: 1.5em;
-	
+   white-space: nowrap;	
 }
 
 #itemModal #closeModal {
@@ -726,7 +726,7 @@ label.timeTitle {
 }
 
 .img-area .loading-spinner {
-	left: 8em;
+	left: 6.7em;
 }
 
 #captureBtn {
@@ -750,4 +750,60 @@ label.timeTitle {
 
 #modal-btns{
     text-align: right;
+}
+/* 기본 라벨 스타일 */
+.checkLabel {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+    margin-right: 5px;
+    height: 37px;
+}
+/* 체크박스 숨김 */
+input[type="checkbox"] {
+	display: none;
+}
+
+/* 체크박스 디자인 */
+.checkmark {
+	width: 20px;
+	height: 20px;
+	background-color: #f9f9f9;
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	position: relative;
+	transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+/* 체크 상태일 때 스타일 */
+input[type="checkbox"]:checked+.checkmark {
+	background-color: #506a8b;
+	box-shadow: 0 0 1px rgb(60 66 71 / 70%);
+}
+
+/* 체크 표시 */
+.checkmark::after {
+	content: "";
+	position: absolute;
+	top: 2px;
+	left: 6px;
+	width: 5px;
+	height: 11px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	transform: rotate(45deg);
+	opacity: 0;
+	transition: opacity 0.2s;
+}
+
+/* 체크 상태일 때 체크 표시 나타남 */
+input[type="checkbox"]:checked+.checkmark::after {
+	opacity: 1;
+}
+
+/* 선택 가능 여부에 따라 커서 변경 */
+input[type="checkbox"]:disabled+.checkmark {
+	background-color: #555;
+	cursor: not-allowed;
 }
