--- a/css/default.css
+++ b/css/default.css
@@ -3,10 +3,13 @@ body {
    	justify-items: center;
    	touch-action: manipulation; /* 터치 제스처 제한 */
 }
-footer{
+footer {
     text-align: center;
     color: #999;
     font-size: 11px;
+    height: 45px;
+    position: absolute;
+    bottom: 0;
 }
 #main {
     /*width: calc(240px* 6 + 35px);*/
