--- a/css/default.css
+++ b/css/default.css
@@ -895,7 +895,7 @@ input[type="checkbox"]:disabled+.checkmark {
 	position: absolute;
     bottom: -16px;
     right: 0px;
-    font-size: 9px;
-    color: #b7b7b7;
+    font-size: 10px;
+    color: #555;
     padding-bottom: 0.3em;
 }
