--- a/css/default.css
+++ b/css/default.css
@@ -498,6 +498,7 @@ span#loadingClose {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
     width: 55%;
+    position: relative;
 }
 
 /* 모달 헤더 */
@@ -634,6 +635,14 @@ span#loadingClose {
     overflow: hidden;
 }
 
+#curDate{
+    position: absolute;
+    bottom: -16px;
+    right: 0px;
+    font-size: 10px;
+    color: #555;
+    padding-bottom: 0.3em;
+}
 
 #itemModal .loading-spinner, .loading-spinner {
     border: 4px solid rgba(0, 0, 0, 0.1);
@@ -890,12 +899,4 @@ input[type="checkbox"]:disabled+.checkmark {
 
 .ico-down-triangle:before {
     content: "\25BC";
-}
-#curDate{
-	position: absolute;
-    bottom: -16px;
-    right: 0px;
-    font-size: 10px;
-    color: #555;
-    padding-bottom: 0.3em;
 }
