--- a/css/font.css
+++ b/css/font.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
+/*@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);*/
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+@import url('https://fastly.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.1/packages/wanted-sans/fonts/webfonts/variable/split/WantedSansVariable.min.css'); 
+
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
 
 @font-face {
     font-family: 'MabinogiClassicR2';
