--- a/css/font.css
+++ b/css/font.css
@@ -9,7 +9,12 @@
     font-weight: 400;
     font-style: normal;
 }
-
+@font-face {
+    font-family: 'Freesentation-9Black';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2404@1.0/Freesentation-9Black.woff2') format('woff2');
+    font-weight: 900;
+    font-style: normal;
+}
 @font-face {
     font-family: 'MabinogiClassicR2';
     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/MabinogiClassicR.woff2') format('woff2');
