--- a/css/default.css
+++ b/css/default.css
@@ -83,13 +83,39 @@ div {
 	margin-bottom: 0.5em;
 	width: 90%;
 	display: inline-block;
+	/* display: flex; */
+	/* text-align: center; */
+	/* justify-items: center; */
+	/* justify-content: center; */
+	/* flex-direction: column; */
+	/* align-items: center; */
+	/* align-content: space-around; */
 }
+
 p {
+    margin: 0px;
+}
+
+#loadingOverlay p {
     margin: 2px;
     text-align: left;
     display: flex;
     justify-content: space-evenly;
 }
+
+.item p {
+	margin: 2px;
+    text-align: left;
+    display: flex;
+    max-width: 250px;
+    justify-content: space-evenly;
+    flex-direction: row;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    align-items: center;
+}
+
 h2.area-capture{
 	text-align: left;
 }
@@ -978,3 +1004,54 @@ itemModal .set-by-server{
     display: flex;
     flex-direction: row;
 }
+.container.filter-color {
+    grid-template-columns: repeat(auto-fit, minmax(240px, 270px));
+}
+.location-area.filters {
+    display: flex;
+    width: fit-content;
+}
+
+#tables {
+	display: flex;
+	flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.filters h2.area-capture{
+	text-align: center;
+}
+.hide-show-srch {
+    background: #ffff;
+    position: fixed;
+    top: 102px;
+    padding: 10px;
+    right: 0px;
+    box-shadow: 0px 1px 5px #8f8f8f;
+    z-index: 1;
+    transform: translateY(0);
+  	transition: transform 1s ease;
+  	display: none;
+}
+
+
+/* top이 0이 되고 z-index가 -1이 되도록 설정 */
+.hide-show-srch.hidden2 {
+  z-index: -1;
+  transform: translateY(-102px);
+}
+
+
+/* 애니메이션 정의 */
+@keyframes hideShowSearchAnimation {
+  0% {
+    top: 102px;
+    z-index: -1;
+  }
+  100% {
+    top: 0;
+    z-index: -1;
+  }
+}
+
