--- a/css/default.css
+++ b/css/default.css
@@ -605,6 +605,7 @@ span#loadingClose {
     flex-direction: column;
     align-items: flex-start;
     margin: 0px;
+    white-space: nowrap;
 }
 
 #itemModal .color-info .hex, #itemModal .color-info .rgb {
