--- a/css/default.css
+++ b/css/default.css
@@ -1083,3 +1083,48 @@ itemModal .set-by-server{
 #itemModal .info-jumoney-name .color_rect.show:after {
     opacity: 1;
 }
+
+#previewModal {
+    display: none;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgb(0 0 0 / 20%);
+    align-items: center;
+    z-index: 1000;
+    justify-content: center;
+    box-shadow: none;
+    max-width: none;
+    padding: 0px;
+}
+
+#previewModal .modal-content{
+	background: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: white;
+    padding: 35px 15px 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 830px;
+    width: 55%;
+    position: relative;
+    overflow-y: visible;
+    overflow-x: hidden;
+    max-height: calc(100vh - 70px);
+}
+#previewModal img{
+	width: 100%;
+    height: auto;
+    border: 1px dashed #a9a9a9;
+    border-radius: 5px;
+    cursor: url(../image/png-light-ico.png) 0 0, auto;
+}
+#closePreviewModal{
+	position: absolute;
+    top: 5px;
+    right: 13px;
+    cursor: pointer;
+}
